assets/main.css
body {
  /*min-height: 75rem; /* Can be removed; just added for demo purposes */*/
  /*font-family: 'Didact Gothic', sans-serif;*/
  /*font-weight: bold;*/
/*font-family: 'Open Sans', sans-serif;*/
}

body.cover {
  background-color: #333;
  color: #fff;
}

.cover .hub {
  position: absolute;

  max-width: 550px;
  height: 230px;

  top: 0;
  bottom: 0;
  left: 0;
  right: 0;

  margin: auto;
  padding: 10px;
}

.cover .hub h1 {
  font-size: 14rem;
  line-height: 11rem;
  padding: 0;
  margin: 0;
  font-family: 'Cookie';
}

.cover .lead .btn {
  font-family: 'Raleway', sans-serif;
  width: 100%;
  color: #666;
  font-size: .9rem;
  margin-bottom: 0px;
  padding: .4rem 1rem;
}

.hub .hub-brand a.nav-link {
  font-size: 2rem;
  margin: 0;
  padding: 0;
  line-height: 0;
  font-family: 'Cookie';
}

.hub .jumbotron {
  padding-top: 5rem;
  padding-bottom: 5rem;
  margin-bottom: 0;
  text-align: center;
}

.hub .jumbotron p:last-child {
  margin-bottom: 0;
}

.hub .jumbotron-heading {
  font-weight: 300;
}

.hub .jumbotron .container {
  max-width: 41rem;
}

.section-title {
  font-size: 1.25rem;
  font-weight: 300;
  text-align: center;
}


.hub .jumbotron.mission {
  background-color: #fff;
}

.hub .jumbotron.mission {
  background-color: #f7f7f7;
}

.hub .cards {
  padding-top: 3rem;
  padding-bottom: 3rem;
}

.hub .card {
  margin-bottom: 2rem;
  background-color: inherit;
  font-size: 85%;
}

.hub .cards .section-title {
  color: #777;
  margin-bottom: 1rem;
}

.hub .cards.core-values {
  background-color: #292b2c;
  color: #eee;
}

.hub .cards.strategic-goals {
  background-color: #393b3c;
  color: #ccc;
}

.hub .core-values .card, .hub .strategic-goals .card {
  padding: .75rem;
  border: 0;
}

.hub .card a {
  color: inherit;
  text-decoration: none;
}

.hub .card-header {
  display: block;
}

.hub .cards.upcoming-events {
  background-color: #f7f7f7;
}

@media (min-width: 576px) {
  .hub .resources .card {
    min-height: 18.5rem;
  }

  .hub .resources.upcoming-events .card {
    min-height: 22rem;
  }
}

.hub .resources .card {
  background-color: #ffffff;
}

.hub .resources .card-header {
  background-color: #333333;
  color: #eeeeee;
  font-size: 4rem;
  padding-top: 2.5rem;
  padding-bottom: 2.5rem;
  text-align: center;
}

.hub .cards.work-resources {
  background-color: #e7e7e7;
  padding-top: 2rem;
  padding-bottom: 2rem;
}

/*.album {
  min-height: 50rem;
  padding-top: 3rem;
  padding-bottom: 3rem;
  background-color: #f7f7f7;
}

.card {
  float: left;
  width: 33.333%;
  padding: .75rem;
  margin-bottom: 2rem;
  border: 0;
}

.card > img {
  margin-bottom: .75rem;
}

.card-text {
  font-size: 85%;
}

footer {
  padding-top: 3rem;
  padding-bottom: 3rem;
}

footer p {
  margin-bottom: .25rem;
}*/

